# taskflow

./: .gitignore  CLAUDE.md  README.md  SPEC-DEPENDENCY-ENHANCE.md  SPEC-OPTIMIZE.md  SPEC.md  pyproject.toml
.claude/: CLAUDE.md  lessons.md  session.md
.claude/rules/: project.md
api/: crud.py  database.py  main.py  models.py  schemas.py
cli/: taskflow.db.bak
docs/: AGENT-RESEARCH.md  API.md  ARCHITECTURE.md  CHANGELOG.md  DATABASE.md  README.md  SPEC-UI.md  SPEC.md
taskflow/: __init__.py  cli.py  db.py
taskflow.egg-info/: SOURCES.txt
web/: package-lock.json  package.json
web/src/: App.vue  router.ts
web/src/api/: tasks.ts
web/src/views/: KANBAN.md  Projects.vue  SPEC-DEPENDENCY.md  SPEC-EXPORT.md  SPEC-TREEVIEW.md  Stats.vue  TaskDetail.vue  TaskList.vue  TaskTree.vue
